# cafe_ppvis

./: .gitignore  README.md
client/: client.py  client_handler.py
config/: config.py
cplusplus/: Application.cpp  Application.hpp  CMakeLists.txt  CashDesk.cpp  CashDesk.hpp  CoffeeHouse.cpp  CoffeeHouse.hpp  Ingredient.cpp  Ingredient.hpp  KitchenMachine.cpp  KitchenMachine.hpp  Product.cpp  Product.hpp  Recipe.cpp  Recipe.hpp  RecipeStep.cpp  RecipeStep.hpp  Settings.hpp  Visitor.cpp  Visitor.hpp  VisitorGenerator.cpp  VisitorGenerator.hpp  VisitorRequestStatus.hpp  Worker.cpp  Worker.hpp  main.cpp
cplusplus/ext1/: ApplicationExt1.cpp  ApplicationExt1.hpp  CMakeLists.txt  WorkerWithSpeed.cpp  WorkerWithSpeed.hpp  main.cpp
cplusplus/ext2/: ApplicationExt2.cpp  ApplicationExt2.hpp  CMakeLists.txt  VisitorGeneratorExt2.cpp  VisitorGeneratorExt2.hpp  VisitorWithLastChance.cpp  VisitorWithLastChance.hpp  main.cpp
cplusplus/ext3/: ApplicationExt3.cpp  ApplicationExt3.hpp  CMakeLists.txt.txt  VisitorExt3.cpp  VisitorExt3.hpp  VisitorGeneratorExt3.cpp  VisitorGeneratorExt3.hpp  WorkerExt3.cpp  WorkerExt3.hpp  main.cpp
cplusplus/ext4/: ApplicationExt4.cpp  ApplicationExt4.hpp  CMakeLists.txt  CoffeeHouseWithMoreStatistics.cpp  CoffeeHouseWithMoreStatistics.hpp  main.cpp
cplusplus/ext5/: ApplicationExt5.cpp  ApplicationExt5.hpp  CMakeLists.txt  VisitorWithMood.cpp  VisitorWithMood.hpp  VisitorWithMoodGenerator.cpp  VisitorWithMoodGenerator.hpp  main.cpp
cplusplus/ext6/: ApplicationExt6.cpp  ApplicationExt6.hpp  CMakeLists.txt.txt  CoffeeHouseWithSupplyManager.cpp  CoffeeHouseWithSupplyManager.hpp  SupplyManager.cpp  SupplyManager.hpp  main.cpp
docs/: cafe_bpmn.drawio
docs/Class Diagrams/extension5/: Extension5.puml
docs/Class Diagrams/extension6/: Extension6.puml
docs/extension6/: Extension6.puml
extension1/: ApplicationExt1.py  WorkerWithSpeed.py  main.py
extension2/: ApplicationExt2.py  VisitorGeneratorExt2.py  VisitorWithLastChance.py  main.py
extension3/: ApplicationExt3.py  VisitorExt3.py  VisitorGeneratorExt3.py  WorkerExt3.py  main.py
extension4/: ApplicationExt4.py  CoffeeHouseWithMoreStatistics.py  main.py
extension5/: ApplicationExt5.py  VisitorWithMood.py  VisitorWithMoodGenerator.py  main.py
extension6/: ApplicationExt6.py  CoffeeHouseWithSupplyManager.py  SupplyManager.py  SupplyManagerWorkPlace.py  main.py
python/extension1/: ApplicationExt1.py  WorkerWithSpeed.py  main.py
python/extension2/: ApplicationExt2.py  VisitorGeneratorExt2.py  VisitorWithLastChance.py  main.py
python/extension3/: ApplicationExt3.py  VisitorExt3.py  VisitorGeneratorExt3.py  WorkerExt3.py  main.py
python/extension4/: ApplicationExt4.py  CoffeeHouseWithMoreStatistics.py  main.py
python/extension5/: ApplicationExt5.py  VisitorWithMood.py  VisitorWithMoodGenerator.py  main.py
python/extension6/: ApplicationExt6.py  CoffeeHouseWithSupplyManager.py  SupplyManager.py  main.py
python/root/: Application.py  CoffeeHouse.py  KitchenMachine.py  Recipe.py  RecipeStep.py  Visitor.py  VisitorGenerator.py  Worker.py  main.py
root/: Application.py  CashDesk.py  CoffeeHouse.py  Ingredient.py  Product.py  Recipe.py  RecipeStep.py  Settings.py  Visitor.py  VisitorGenerator.py  VisitorRequestStatus.py  Worker.py  main.py
tools/: tools.py
